integrated_projects/Autonomous_Zenith_Optimizer/error_scan_report.txt
SCAN FAIL - 13 Fehler gefunden.
- commercial_launch_plan.py: PyCompileError:   File "C:\Users\Laptop\Desktop\Autonomous Zenith Optimizer\commercial_launch_plan.py", line 55
    print("
          ^
SyntaxError: unterminated string literal (detected at line 55)

- final_system_validation.py: PyCompileError:   File "C:\Users\Laptop\Desktop\Autonomous Zenith Optimizer\final_system_validation.py", line 111
    print("
          ^
SyntaxError: unterminated string literal (detected at line 111)

- fix_encoding.py: PyCompileError:   File "C:\Users\Laptop\Desktop\Autonomous Zenith Optimizer\fix_encoding.py", line 93
    
    ^
SyntaxError: expected 'except' or 'finally' block

- marketing_campaign_launcher.py: PyCompileError:   File "C:\Users\Laptop\Desktop\Autonomous Zenith Optimizer\marketing_campaign_launcher.py", line 254
    print("
          ^
SyntaxError: unterminated string literal (detected at line 254)

- python_modules\app_generator.py: PyCompileError:   File "C:\Users\Laptop\Desktop\Autonomous Zenith Optimizer\python_modules\app_generator.py", line 145
    jsx = [f"function App() {{
           ^
SyntaxError: unterminated f-string literal (detected at line 145)

- python_modules\auto_error_fixing_system.py: PyCompileError:   File "C:\Users\Laptop\Desktop\Autonomous Zenith Optimizer\python_modules\auto_error_fixing_system.py", line 576
    print("
          ^
SyntaxError: unterminated string literal (detected at line 576)

- python_modules\commercial_subscription_system.py: PyCompileError:   File "C:\Users\Laptop\Desktop\Autonomous Zenith Optimizer\python_modules\commercial_subscription_system.py", line 539
    print("
          ^
SyntaxError: unterminated string literal (detected at line 539)

- python_modules\crypto_mining_modul.py: PyCompileError:   File "C:\Users\Laptop\Desktop\Autonomous Zenith Optimizer\python_modules\crypto_mining_modul.py", line 197
    except:
    ^^^^^^
SyntaxError: invalid syntax

- python_modules\mining_data_collector.py: PyCompileError:   File "C:\Users\Laptop\Desktop\Autonomous Zenith Optimizer\python_modules\mining_data_collector.py", line 734
    from __future__ import annotations
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: from __future__ imports must occur at the beginning of the file

- python_modules\regional_electricity_calculator.py: PyCompileError:   File "C:\Users\Laptop\Desktop\Autonomous Zenith Optimizer\python_modules\regional_electricity_calculator.py", line 459
    print("
          ^
SyntaxError: unterminated string literal (detected at line 459)

- python_modules\screenshot_converter.py: PyCompileError:   File "C:\Users\Laptop\Desktop\Autonomous Zenith Optimizer\python_modules\screenshot_converter.py", line 545
    print("
          ^
SyntaxError: unterminated string literal (detected at line 545)

- python_modules\singularity_consciousness.py: PyCompileError:   File "C:\Users\Laptop\Desktop\Autonomous Zenith Optimizer\python_modules\singularity_consciousness.py", line 410
    print("
          ^
SyntaxError: unterminated string literal (detected at line 410)

- python_modules\viral_marketing_automation.py: PyCompileError:   File "C:\Users\Laptop\Desktop\Autonomous Zenith Optimizer\python_modules\viral_marketing_automation.py", line 662
    print("
          ^
SyntaxError: unterminated string literal (detected at line 662)

